--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
 raytracing
+main
+*.o
+*.a
+*.so
+*.exe
+*.out
+/build/
+bin/
+obj/
+*.dSYM/
+*~
+*.swp
+*.swo
+*.bak
+*.tmp
+.vscode/
+.idea/
+/lib/
+libs/
+CMakeCache.txt
+CMakeFiles/
+Makefile.in
+Makefile
+CMakeLists.txt.user
+*.d
+*.log
+*.pc
